[gd_scene load_steps=4 format=3 uid="uid://btgulx8k02uy8"]

[ext_resource type="Script" path="res://scripts/language_game.gd" id="1_2f5lu"]
[ext_resource type="Texture2D" uid="uid://c1cgl360u8vlx" path="res://assets/NeuronautasPaginas.png" id="2_wlytk"]
[ext_resource type="FontFile" uid="uid://db5j82d65e1uw" path="res://assets/fonts/ComingSoon-Regular.ttf" id="3_msgai"]

[node name="language_game" type="Node2D"]
script = ExtResource("1_2f5lu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
clip_contents = true
offset_right = 14.0
offset_bottom = 37.0
scale = Vector2(28.8054, 16.2041)
color = Color(0.0470588, 0.0392157, 0.101961, 1)

[node name="NeuronautasPaginas" type="Sprite2D" parent="."]
position = Vector2(200, 300)
texture = ExtResource("2_wlytk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 32.0
offset_top = 336.0
offset_right = 352.0
offset_bottom = 600.0
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_msgai")
text = "Iniciar"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_msgai")
text = "Voltar para o menu"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
